--- a/.github/workflows/standard-version-release.yaml
+++ b/.github/workflows/standard-version-release.yaml
@@ -13,16 +13,6 @@ jobs:
     runs-on: ubuntu-latest
     name: Standard Version Flow Release
     steps:
-      - uses: actions/checkout@v2
-
-      - name: Initialize mandatory git config
-        run: |
-          git config user.name "GitHub actions"
-          git config user.email noreply@github.com
-
-      - name: Bumb version
-        uses: Wuerike/standard-version-flow-release@master
+      - uses: Wuerike/javascript-action@main
         with:
-          owner: ${{ github.repository_owner }}
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          release_as: ${{ github.event.inputs.version }}
+          milliseconds: 1000
