--- a/.github/workflows/standard-version-release.yaml
+++ b/.github/workflows/standard-version-release.yaml
@@ -15,4 +15,6 @@ jobs:
     steps:
       - uses: Wuerike/javascript-action@main
         with:
-          milliseconds: 1000
+          milliseconds: 1234
+          owner: ${{ github.repository_owner }}
+          github_token: ${{ secrets.GITHUB_TOKEN }}
