--- a/.github/workflows/standard-version.yaml
+++ b/.github/workflows/standard-version.yaml
@@ -13,6 +13,6 @@ jobs:
     runs-on: ubuntu-latest
     name: Standard Version
     steps:
-      - uses: actions/hello-world-docker-action@master
+      - uses: Wuerike/standard-version-release-branch@main
         with:
           who-to-greet: 'Mona the Octocat'
