--- a/.github/workflows/standard-version.yaml
+++ b/.github/workflows/standard-version.yaml
@@ -15,4 +15,7 @@ jobs:
     steps:
       - uses: Wuerike/standard-version-release-branch@main
         with:
-          who-to-greet: 'Wuerike 123 Teste'
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          release_version: ${{ github.event.inputs.version }}
+          origin_branch: develop
+          target_branch: master
