--- a/.github/workflows/draft-new-release.yml
+++ b/.github/workflows/draft-new-release.yml
@@ -14,9 +14,6 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Install standard-version
-        run: npm i standard-version
-
       - name: Initialize mandatory git config
         run: |
           git config user.name "GitHub actions"
@@ -26,11 +23,10 @@ jobs:
         run: git checkout -b release/${{ github.event.inputs.version }}
 
       - name: Run standard-version with input version
-        id: make-commit
-        run: |
-          npx standard-version --release-as ${{ github.event.inputs.version }} --no-verify
-          echo "::set-output name=commit::$(git rev-parse HEAD)"
-          echo "::set-output name=version::$(git describe)"
+        id: release
+        uses: ltv/standard-version-action@v2
+        with:
+         releaseAs: ${{ github.event.inputs.version }}
 
       - name: Push new branch
         run: git push origin release/${{ github.event.inputs.version }} --follow-tags
