update input version description

--- a/.github/workflows/standard-version.yaml
+++ b/.github/workflows/standard-version.yaml
@@ -4,8 +4,7 @@ on:
   workflow_dispatch:
     inputs:
       version:
-        description: 'The version you want to release. 
-                      Ex: 1.2.3'
+        description: 'The version you want to release.'
         required: false
 
 jobs:
