--- a/.github/workflows/regex-test-action.yml
+++ b/.github/workflows/regex-test-action.yml
@@ -93,8 +93,6 @@ jobs:
 
       - name: Print extracted results
         run: |
-          echo "## Motivo da mudança" 
-          echo "${{ steps.change-reason-regex.outputs.group1 }}"
-
-          echo "## Links das demandas que estão sendo resolvidas com a mudança" 
-          echo "${{ steps.card-link-regex.outputs.group1 }}"
+          echo |
+            ## Motivo da mudança ${{ steps.change-reason-regex.outputs.group1 }}
+            ## Links das demandas que estão sendo resolvidas com a mudança ${{ steps.card-link-regex.outputs.group1 }}
