Set as draft to false

--- a/.github/workflows/standard-version.yaml
+++ b/.github/workflows/standard-version.yaml
@@ -21,6 +21,6 @@ jobs:
           release_version: ${{ github.event.inputs.version }}
           origin_branch: develop
           target_branch: master
-          as_draft: true
+          as_draft: false
           push_tag: false
           pr_template: "PR opened by [standard-version-release-branch](https://github.com/Wuerike/standard-version-release-branch)"
