--- a/.github/workflows/release-please.yaml
+++ b/.github/workflows/release-please.yaml
@@ -12,5 +12,4 @@ jobs:
         with:
           release-type: python
           package-name: release-please-action
-          default-branch: master
-          
+          default-branch: develop
