feat: Adição numero 3 - Pós PR Criado

--- a/.github/workflows/release-please.yaml
+++ b/.github/workflows/release-please.yaml
@@ -12,3 +12,5 @@ jobs:
         with:
           release-type: python
           package-name: release-please-action
+          default-branch: develop
+
