--- a/.github/workflows/publish_new_release.yml
+++ b/.github/workflows/publish_new_release.yml
@@ -36,7 +36,7 @@ jobs:
         uses: actions/github-script@v7
         with:
           script: |
-            const body = `${{ github.event.pull_request.body }}`;
+            const body = String.raw`${{ github.event.pull_request.body }}`;
             const match = body.match(/## Descrições das alterações([\s\S]*?)(?=<!-- auditing-block start -->)/);
             let text = match ? match[0] : '';
             // Format images as links
