--- a/.github/workflows/publish_new_release.yml
+++ b/.github/workflows/publish_new_release.yml
@@ -34,9 +34,11 @@ jobs:
       - name: Extract change reason from pull request body
         id: change-reason
         uses: actions/github-script@v7
+        env:
+          PR_BODY: ${{ github.event.pull_request.body }}
         with:
           script: |
-            const body = String.raw`${{ github.event.pull_request.body }}`;
+            const body = process.env.PR_BODY || '';
             const match = body.match(/## Descrições das alterações([\s\S]*?)(?=<!-- auditing-block start -->)/);
             let text = match ? match[0] : '';
             // Format images as links
